# azure-ai-search-example

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  postCreate.sh  postStart.sh
docs/: MIGRATION_SUMMARY.md  ORCHESTRATOR.md
docs/strategy_template/: __init__.py  config.py  strategy.py
examples/: dependency_injection_example.py  orchestrator_usage.py  usage_async.py
src/prompt_retrieval/: __init__.py  azure_search_strategy.py  config.py  container.py  models.py  services.py  telemetry.py
src/prompt_retrieval/common/: __init__.py  models.py  strategy_base.py  telemetry.py
src/prompt_retrieval/orchestrator/: __init__.py  config.py  orchestrator.py
src/prompt_retrieval/strategies/: __init__.py
src/prompt_retrieval/strategies/dynamic_prompt/: __init__.py  config.py  strategy.py
src/prompt_retrieval/strategies/passthrough/: __init__.py  config.py  strategy.py
src/prompt_retrieval/strategies/similarity_search/: __init__.py  strategy.py
tests/: conftest.py  test_azure_search_strategy.py  test_dependency_injection.py  test_orchestrator.py  test_telemetry_service.py
