
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-prompt-retrieval"
version = "0.1.0"
description = "Async prompt retrieval strategy for Azure AI Search using vector queries."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Luis Apellaniz Fontanez" }]
license = { text = "MIT" }
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
test = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_retrieval*"]


[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

exclude = '''
/(
  \.venv
  | build
  | dist
  | \.eggs
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | \.tox
)/
'''


[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  ".venv",
  "build",
  "dist",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
